<resources>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username_field">Enter your username...</string>
    <string name="prompt_password_field">Enter your password...</string>
    <string name="action_sign_in">Sign in</string>
    <string name="app_name">Track my route</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>