<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#143B75"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="146dp"
        android:adjustViewBounds="false"
        android:alpha="1"
        android:src="@drawable/map_with_title" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="383dp"
        android:layout_height="224dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/username_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/prompt_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="#000000"
                android:backgroundTint="#D6D6D6"
                android:hint="@string/prompt_username_field"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/prompt_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="#050505"
                android:backgroundTint="#D6D6D6"
                android:hint="@string/prompt_password_field"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#1E7520"
                android:enabled="true"
                android:fontFamily="sans-serif"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:typeface="serif" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0px"
        android:layout_marginTop="100px"
        android:text="Do not have account?"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:backgroundTint="#FF9800"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

</LinearLayout>